--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -37,6 +37,15 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/DHABUM9I/Brown - 1982 - Cohomology of Groups.pdf}
 }
 
+@misc{cohenTopologyFiberBundles,
+  title = {The {{Topology}} of {{Fiber Bundles}}},
+  author = {Cohen, Ralph L.},
+  url = {https://math.stanford.edu/~ralph/fiber.pdf},
+  urldate = {2024-09-27},
+  annotation = {lecture notes},
+  file = {/Users/abrahamrojasvega/Zotero/storage/TCLK62DZ/fiber.pdf}
+}
+
 @online{diazMethodIntegralCohomology2007,
   title = {A Method for Integral Cohomology of Posets},
   author = {Diaz, Antonio},
@@ -119,7 +128,7 @@
   langid = {english},
   pagetotal = {353},
   keywords = {notion},
-  file = {/Users/abrahamrojasvega/Zotero/storage/HFUYAPYD/Husemöller - 1994 - Fibre bundles.pdf}
+  file = {/Users/abrahamrojasvega/Zotero/storage/HFUYAPYD/PDF}
 }
 
 @book{karoubiContemporaryDevelopmentsAlgebraic2003,
@@ -256,6 +265,21 @@
   isbn = {978-1-108-85589-1 978-1-108-47962-2},
   keywords = {notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
+}
+
+@article{serreHomologieSinguliereEspaces1951,
+  title = {Homologie {{Singulière Des Espaces Fibrès}}},
+  author = {Serre, Jean-Pierre},
+  date = {1951},
+  journaltitle = {Annals of Mathematics},
+  volume = {54},
+  number = {3},
+  eprint = {1969485},
+  eprinttype = {jstor},
+  pages = {425--505},
+  publisher = {[Annals of Mathematics, Trustees of Princeton University on Behalf of the Annals of Mathematics, Mathematics Department, Princeton University]},
+  issn = {0003-486X},
+  doi = {10.2307/1969485}
 }
 
 @book{srinivasAlgebraicKTheory1996,
