--- a/notas/topology.tex
+++ b/notas/topology.tex
@@ -897,13 +897,11 @@ $E$ must be connected, as $H_0(E)=\mathbb{Z}$. Since $G^{ab} =G /[G, G]=H_1(E ; 
 $$
 H_2(E ; \mathbb{Z}) \rightarrow H_2(G ; \mathbb{Z}) \xrightarrow{d^2} H_1(\tilde{E} ; \mathbb{Z})^G \rightarrow H_1(E ; \mathbb{Z}) \rightarrow H_1(G ; \mathbb{Z})
 $$
-
-
 %revisar esta demostracion con secuencias espectrales, tambien secuencia exacta larga de homotopy fiber
 
-Let $X$ and $Y$ be based connected CW complexes. A \textbf{map} $f: X \rightarrow Y$ is called \textbf{acyclic} if the homotopy fiber $F(f)$ of $f$ is acyclic (has the homology of a point).\\
 This implies that $F(f)$ is connected and $\pi_1 F(f)$ is a perfect group.
 \end{proof}
+Let $X$ and $Y$ be based connected CW complexes. A \textbf{map} $f: X \rightarrow Y$ is called \textbf{acyclic} if the homotopy fiber $F(f)$ of $f$ is acyclic (has the homology of a point).
 
 From the exact sequence $\pi_1 F(f) \rightarrow \pi_1(X) \rightarrow \pi_1(Y) \rightarrow \pi_0 F(f)$ we also have that $\pi_1(X) \rightarrow \pi_1(Y)$ is onto, and its kernel $P$ is a perfect normal subgroup of $\pi_1(X)$.\\
 
@@ -946,8 +944,6 @@ Let $(X, x)$ be a connected CW complex, $N \triangleleft$ $\pi_1(X, x)$ a perfec
         \item Let $P$ be a perfect normal subgroup of a group $G$, with corresponding +-construction $f: B G \rightarrow B G^{+}$. If $F(f)$ is the homotopy fiber of $f$, then $\pi_1 F(f)$ is the universal central extension of $P$, and $\pi_2\left(B G^{+}\right) \cong$ $H_2(P ; \mathbb{Z})$
     \end{enumerate}
 \end{prop}
-
-
 
 
 
