--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -163,6 +163,21 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/GGBXK5TT/Kervaire - 1969 - Smooth homology spheres and their fundamental groups.pdf}
 }
 
+@book{knudsonHomologyLinearGroups2001,
+  title = {Homology of Linear Groups},
+  author = {Knudson, Kevin P.},
+  date = {2001},
+  series = {Progress in Mathematics},
+  number = {v. 193},
+  publisher = {Birkhauser Verlag},
+  location = {Basel ; Boston},
+  isbn = {978-3-7643-6415-1 978-0-8176-6415-2},
+  langid = {english},
+  pagetotal = {192},
+  keywords = {Homology theory,Linear algebraic groups,notion},
+  file = {/Users/abrahamrojasvega/Zotero/storage/FKQQK64P/Knudson - 2001 - Homology of linear groups.pdf}
+}
+
 @misc{kupersHomologicalStabilityMinicourse2021,
   title = {Homological {{Stability Minicourse}}},
   author = {Kupers, Alexander},
@@ -199,6 +214,20 @@
   pagetotal = {254},
   keywords = {notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/TB5AE47F/May - 1999 - A Concise Course in Algebraic Topology.pdf}
+}
+
+@book{mayConciseCourseAlgebraic1999a,
+  title = {A {{Concise Course}} in {{Algebraic Topology}}},
+  author = {May, J. P.},
+  date = {1999-09},
+  eprint = {g8SG03R1bpgC},
+  eprinttype = {googlebooks},
+  publisher = {University of Chicago Press},
+  abstract = {Algebraic topology is a basic part of modern mathematics, and some knowledge of this area is indispensable for any advanced work relating to geometry, including topology itself, differential geometry, algebraic geometry, and Lie groups. This book provides a detailed treatment of algebraic topology both for teachers of the subject and for advanced graduate students in mathematics either specializing in this area or continuing on to other fields.  J. Peter May's approach reflects the enormous internal developments within algebraic topology over the past several decades, most of which are largely unknown to mathematicians in other fields. But he also retains the classical presentations of various topics where appropriate. Most chapters end with problems that further explore and refine the concepts presented. The final four chapters provide sketches of substantial areas of algebraic topology that are normally omitted from introductory texts, and the book concludes with a list of suggested readings for those interested in delving further into the field.},
+  isbn = {978-0-226-51183-2},
+  langid = {english},
+  pagetotal = {262},
+  keywords = {Mathematics / General,Mathematics / Topology}
 }
 
 @book{maySimplicialObjectsAlgebraic1967,
@@ -265,21 +294,6 @@
   isbn = {978-1-108-85589-1 978-1-108-47962-2},
   keywords = {notion},
   file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
-}
-
-@article{serreHomologieSinguliereEspaces1951,
-  title = {Homologie {{Singulière Des Espaces Fibrès}}},
-  author = {Serre, Jean-Pierre},
-  date = {1951},
-  journaltitle = {Annals of Mathematics},
-  volume = {54},
-  number = {3},
-  eprint = {1969485},
-  eprinttype = {jstor},
-  pages = {425--505},
-  publisher = {[Annals of Mathematics, Trustees of Princeton University on Behalf of the Annals of Mathematics, Mathematics Department, Princeton University]},
-  issn = {0003-486X},
-  doi = {10.2307/1969485}
 }
 
 @book{srinivasAlgebraicKTheory1996,
